--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -22,11 +22,18 @@
             <hr></hr>
             <h:commandButton styleClass="btn btn-danger" action="/panel/comment" value="comment"/>  
             <hr></hr>
+            <h:commandButton styleClass="btn btn-danger" action="/panel/message" value="message"/>  
+            <hr></hr>
             <h:commandButton styleClass="btn btn-warning" action="/panel/news_letter" value="newsLetter"/>  
              <hr></hr>
             <h:commandButton styleClass="btn btn-warning" action="/panel/notification" value="notification"/>  
              <hr></hr>
             <h:commandButton styleClass="btn btn-warning" action="/panel/contact" value="contact"/> 
+            <hr></hr>
+            <h:commandButton styleClass="btn btn-warning" action="/panel/blog" value="blog"/> 
+            <hr></hr>
+            <h:commandButton styleClass="btn btn-warning" action="/panel/about" value="about"/> 
+            
             </div>
              </h:form>
     </h:body>
