index sayfasının düzenlenmesi
Ayça Akdemir

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -14,25 +14,25 @@
             <hr></hr>
             <h:commandButton styleClass="btn btn-success" action="/panel/category" value="category"/>  
             <hr></hr>
-            <h:commandButton styleClass="btn btn-primary" action="/panel/user" value="user"/>  
+            <h:commandButton styleClass="btn btn-warning" action="/panel/user" value="user"/>  
             <hr></hr>
-            <h:commandButton styleClass="btn btn-warning" action="/panel/admin" value="admin"/>  
+            <h:commandButton styleClass="btn btn-danger" action="/panel/admin" value="admin"/>  
             <hr></hr>
-            <h:commandButton styleClass="btn btn-danger" action="/panel/blog_rating" value="BlogRating"/> 
+            <h:commandButton styleClass="btn btn-primary" action="/panel/blog_rating" value="BlogRating"/> 
             <hr></hr>
-            <h:commandButton styleClass="btn btn-danger" action="/panel/comment" value="comment"/>  
+            <h:commandButton styleClass="btn btn-success" action="/panel/comment" value="comment"/>  
             <hr></hr>
-            <h:commandButton styleClass="btn btn-danger" action="/panel/message" value="message"/>  
+            <h:commandButton styleClass="btn btn-warning" action="/panel/message" value="message"/>  
             <hr></hr>
-            <h:commandButton styleClass="btn btn-warning" action="/panel/news_letter" value="newsLetter"/>  
+            <h:commandButton styleClass="btn btn-danger" action="/panel/news_letter" value="newsLetter"/>  
              <hr></hr>
-            <h:commandButton styleClass="btn btn-warning" action="/panel/notification" value="notification"/>  
+            <h:commandButton styleClass="btn btn-primary" action="/panel/notification" value="notification"/>  
              <hr></hr>
-            <h:commandButton styleClass="btn btn-warning" action="/panel/contact" value="contact"/> 
+            <h:commandButton styleClass="btn btn-success" action="/panel/contact" value="contact"/> 
             <hr></hr>
-            <h:commandButton styleClass="btn btn-warning" action="/panel/blog" value="blog"/> 
+            <h:commandButton styleClass="btn btn-danger" action="/panel/blog" value="blog"/> 
             <hr></hr>
-            <h:commandButton styleClass="btn btn-warning" action="/panel/about" value="about"/> 
+            <h:commandButton styleClass="btn btn-primary" action="/panel/about" value="about"/> 
             
             </div>
              </h:form>
