--- a/web/panel/blog.xhtml
+++ b/web/panel/blog.xhtml
@@ -93,6 +93,13 @@
                     <h:commandButton styleClass="btn btn-danger btn-sm" rendered="#{blogBean.entity.id==0}" action="#{blogBean.delete(entity)}" value="Delete"/>
                     <h:commandButton styleClass="btn btn-primary btn-sm" rendered="#{blogBean.entity.id==0}" action="#{blogBean.setEntity(entity)}" value="Update"/>
                 </h:column>
+                <h:column>
+                    <h:link   styleClass="btn btn-warning btn-sm" target="_blank" outcome="/panelDetail/blogDetail" value="Detay görüntüle">
+                    
+                        <f:param  name = "id" value = "#{entity.id}" />
+                    
+                    </h:link > 
+                </h:column>
             </h:dataTable>
             </h:form>
         </div>
