--- a/web/panel/comment.xhtml
+++ b/web/panel/comment.xhtml
@@ -93,6 +93,13 @@
                     <h:commandButton styleClass="btn btn-danger btn-sm"  action="#{commentBean.delete(entity)}" value="Delete"/>
                     <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{commentBean.setEntity(entity)}" value="Update"/>
                 </h:column>
+                <h:column>
+                    <h:link   styleClass="btn btn-warning btn-sm" target="_blank" outcome="/panelDetail/commentDetail" value="Detay görüntüle">
+                    
+                        <f:param  name = "id" value = "#{entity.id}" />
+                    
+                    </h:link > 
+                </h:column>
             </h:dataTable>
              </h:form>
         </div>
