--- a/web/panelDetail/commentDetail.xhtml
+++ b/web/panelDetail/commentDetail.xhtml
@@ -3,7 +3,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets" 
                 >
     <f:metadata>
-        <f:viewParam name="id" value="#{writerBean.entity.id}"/>
+        <f:viewParam name="id" value="#{commentBean.entity.id}"/>
        
     </f:metadata>
 
