--- a/web/panelDetail/blogRatingDetail.xhtml
+++ b/web/panelDetail/blogRatingDetail.xhtml
@@ -19,7 +19,7 @@
             <h:outputLabel value="BLOG : "></h:outputLabel> <h:outputText  value="#{blogRatingBean.findById().blog}" ></h:outputText>
             <h:outputLabel value="TOTAL SCORE : "></h:outputLabel> <h:outputText  value="#{blogRatingBean.findById().total_score}" ></h:outputText>
         </h:panelGrid>
-        <h:commandButton styleClass="btn btn-danger m-3" action="/panel/blogRating" value="önceki sayfa"/> 
+        <h:commandButton styleClass="btn btn-danger m-3" action="/panel/blog_rating" value="önceki sayfa"/> 
     </h:form>
         
         
