--- a/web/panelDetail/blogDetail.xhtml
+++ b/web/panelDetail/blogDetail.xhtml
@@ -20,7 +20,7 @@
             <h:outputLabel value="CONTENT : "></h:outputLabel> <h:outputText  value="#{blogBean.findById().content}" ></h:outputText>
              <h:outputLabel value="IMAGE : "></h:outputLabel> <h:outputText  value="#{blogBean.findById().image}" ></h:outputText>
             <h:outputLabel value="CREATE DATE : "></h:outputLabel> <h:outputText  value="#{blogBean.findById().create_date}" ></h:outputText>
-            <h:outputLabel value="CATEGORY : "></h:outputLabel> <h:outputText  value="#{blogBean.findById().category}" ></h:outputText>
+            <h:outputLabel value="CATEGORY : "></h:outputLabel> <h:outputText  value="#{blogBean.findById().category.name}" ></h:outputText>
             <h:outputLabel value="STATUS : "></h:outputLabel> <h:outputText  value="#{blogBean.findById().status}" ></h:outputText>
             <h:outputLabel value="WRITER : "></h:outputLabel> <h:outputText  value="#{blogBean.findById().writer.name}" ></h:outputText>
         </h:panelGrid>
