--- a/web/panel/contact.xhtml
+++ b/web/panel/contact.xhtml
@@ -82,6 +82,11 @@
                     <h:commandButton styleClass="btn btn-danger btn-sm"  action="#{contactBean.delete(entity)}" value="Delete"/>
                     <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{contactBean.setEntity(entity)}" value="Update"/>
                 </h:column>
+                <h:column>
+                    <h:link   styleClass="btn btn-warning btn-sm" target="_blank" outcome="/panelDetail/contactDetail" value="Detay görüntüle">
+                        <f:param  name = "id" value = "#{entity.id}" />
+                    </h:link > 
+                </h:column>
             </h:dataTable>
              </h:form>
         </div>
