--- a/web/panel/blog.xhtml
+++ b/web/panel/blog.xhtml
@@ -1,15 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      >
-    <h:head>
-        <h:outputStylesheet library="css" name="bootstrap.min.css"/>
-        <title>Writer</title>
-        
-    </h:head>
-    <h:body>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="/template.xhtml">
+    <ui:define name='content'>
         <div class="container">
             <h:form>
                 <h:commandButton styleClass="btn btn-secondary" action="/index" value="Home"/>
@@ -103,5 +99,6 @@
             </h:dataTable>
             </h:form>
         </div>
-    </h:body>
-</html>
+
+</ui:define>
+</ui:composition>
