--- a/web/panel/category.xhtml
+++ b/web/panel/category.xhtml
@@ -16,7 +16,8 @@
 
                 <div class="mb-3">
                     <label class="form-label">Name</label>
-                    <h:inputText styleClass="form-control" value="#{categoryBean.entity.name}"/>
+                    <h:inputText id="cname" styleClass="form-control" value="#{categoryBean.entity.name}" validator="#{categoryBean.validate}" />
+                    <h:message for="cname" style="color:red ;font-size: 10pt"/><br/>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Description</label>
