--- a/web/panel/blog.xhtml
+++ b/web/panel/blog.xhtml
@@ -15,7 +15,8 @@
                 
                 <div class="mb-3">
                     <label class="form-label">Title</label>
-                    <h:inputText styleClass="form-control" value="#{blogBean.entity.title}"/>
+                    <h:inputText id ="title" styleClass="form-control" validator="#{blogBean.validateTitle}" value="#{blogBean.entity.title}"/>
+                    <h:message for="title" style="color:red ; font-size:10pt"/> <br/>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Content</label>
