--- a/web/panel/admin.xhtml
+++ b/web/panel/admin.xhtml
@@ -16,7 +16,8 @@
                 
                 <div class="mb-3">
                     <label class="form-label">Mail</label>
-                    <h:inputText styleClass="form-control" value="#{adminBean.entity.mail}"/>
+                    <h:inputText id="mail" styleClass="form-control" validator="#{adminBean.validateMail}" value="#{adminBean.entity.mail}"/>
+                    <h:message for="mail" style="color:red ; font-size:10pt"/> <br/>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Password</label>
