--- a/web/panel/blog_rating.xhtml
+++ b/web/panel/blog_rating.xhtml
@@ -16,8 +16,8 @@
                 
                 <div class="mb-3">
                     <label class="form-label">Total Score</label>
-                    <h:inputText id="totalScore" styleClass="form-control"validator="#{blogRatingBean.validateTotalScore}" value="#{blogRatingBean.entity.total_score}"/>
-                    <h:message for="totalScore" style="color:red ; font-size:10pt"/> <br/>
+                    <h:inputText  styleClass="form-control" value="#{blogRatingBean.entity.total_score}"/>
+              
                 </div>
                 <div class="mb-3 mt-5">
                      <label class="form-label">Blog</label>
