--- a/web/panelDetail/blogRatingDetail.xhtml
+++ b/web/panelDetail/blogRatingDetail.xhtml
@@ -16,7 +16,7 @@
     <h:form >
         <h:panelGrid columns="2" styleClass="table table-striped table-hover m-3">
             <h:outputLabel value="ID : "></h:outputLabel> <h:outputText value="#{blogRatingBean.entity.id}"></h:outputText>   
-            <h:outputLabel value="BLOG : "></h:outputLabel> <h:outputText  value="#{blogRatingBean.findById().blog}" ></h:outputText>
+            <h:outputLabel value="BLOG : "></h:outputLabel> <h:outputText  value="#{blogRatingBean.findById().blog.title}" ></h:outputText>
             <h:outputLabel value="TOTAL SCORE : "></h:outputLabel> <h:outputText  value="#{blogRatingBean.findById().total_score}" ></h:outputText>
         </h:panelGrid>
         <h:commandButton styleClass="btn btn-danger m-3" action="/panel/blog_rating" value="önceki sayfa"/> 
