--- a/web/panel/blog.xhtml
+++ b/web/panel/blog.xhtml
@@ -20,11 +20,12 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Content</label>
-                    <h:inputText styleClass="form-control" value="#{blogBean.entity.content}"/>
+                    <h:inputText styleClass="form-control" required="true" requiredMessage="Bu alan zorunludur." value="#{blogBean.entity.content}"/>
+                    <h:message for="username"style="color:red ; font-size:10pt"/> <br/>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Image</label>
-                    <h:inputText styleClass="form-control" value="#{blogBean.entity.image}"/>
+                    <h:inputText styleClass="form-control"  value="#{blogBean.entity.image}"/>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Category</label>
