--- a/web/panel/admin.xhtml
+++ b/web/panel/admin.xhtml
@@ -21,7 +21,10 @@
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Password</label>
-                    <h:inputText styleClass="form-control" value="#{adminBean.entity.password}"/>
+                    <h:inputText id="Password" styleClass="form-control" required="true" requiredMessage="Bu alan zorunludur." value="#{adminBean.entity.password}">
+                     
+                    </h:inputText>
+                       <h:message for="Password" style="color:red ; font-size:10pt"/> <br/>
                 </div>
                 <div class="mb-3 mt-5">
                      <label class="form-label">User</label>
