--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -28,6 +28,7 @@
                                     <h:commandButton styleClass="btn btn-success" action="/panel/contact" value="contact"/>     <br></br>
                                     <h:commandButton styleClass="btn btn-danger" action="/panel/blog" value="blog"/>     <br></br>
                                     <h:commandButton styleClass="btn btn-warning" action="/panel/about" value="about"/>    <br></br> 
+                                     <h:commandButton styleClass="btn btn-warning" action="/panel/file" value="file"/>    <br></br> 
                                     
 
                                 </div>
