--- a/web/panel/user.xhtml
+++ b/web/panel/user.xhtml
@@ -74,6 +74,18 @@
                 </h:column>
             </h:dataTable>
              </h:form>
+            <h2>Dosya Yükleyiniz</h2>
+		<p>
+			<h:outputText style="color:red ; font-size:10pt" value="#{userBean.message}"
+				rendered="#{!empty userBean.message}"></h:outputText>
+			<h:form  enctype="multipart/form-data">
+				<h:panelGrid>
+					<h:inputFile value="#{userBean.file1}" styleClass="btn btn-danger"></h:inputFile>
+					<h:commandButton styleClass="btn btn-warning" action="#{userBean.uploadFile()}"
+						value="Upload"></h:commandButton>
+				</h:panelGrid>
+			</h:form>
+		</p>
         </div>
        
    </ui:define>
