--- a/web/panel/category.xhtml
+++ b/web/panel/category.xhtml
@@ -66,6 +66,18 @@
                     </h:column>
                 </h:dataTable>
             </h:form>
+            <h2>Dosya Yükleyiniz</h2>
+		<p>
+			<h:outputText style="color:red ; font-size:10pt" value="#{categoryBean.message}"
+				rendered="#{!empty categoryBean.message}"></h:outputText>
+			<h:form  enctype="multipart/form-data">
+				<h:panelGrid>
+					<h:inputFile value="#{categoryBean.file1}" styleClass="btn btn-danger"></h:inputFile>
+					<h:commandButton styleClass="btn btn-warning" action="#{categoryBean.uploadFile()}"
+						value="Upload"></h:commandButton>
+				</h:panelGrid>
+			</h:form>
+		</p>
         </div>
 
 
