--- a/web/panel/message.xhtml
+++ b/web/panel/message.xhtml
@@ -9,7 +9,8 @@
         <div class="container">
             <h:form>
                 <h:commandButton styleClass="btn btn-secondary" action="/index" value="Home"/>
-
+                <h:commandButton action="#{messageBean.previous()}" value="previous" class="btn btn-danger m-1 text-lg-end"/>
+                <h:commandButton action="#{messageBean.next()}" value="next" class="btn btn-danger"/>
             </h:form>
             <hr></hr>
             <h:form>
