--- a/web/panel/writer.xhtml
+++ b/web/panel/writer.xhtml
@@ -12,7 +12,7 @@
 
             </h:form>
             <hr></hr>
-            <h:form>
+            <h:form id="writer-form">
 
                 <div class="mb-3">
                     <label class="form-label">Name</label>
@@ -44,13 +44,20 @@
                     <h:inputText styleClass="form-control" value="#{writerBean.entity.status}"/>
                 </div>
                 <div class="mb-3">
-                    <h:commandButton styleClass="btn btn-success btn-sm"  action="#{writerBean.create()}" value="Create"/>
-                    <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{writerBean.update()}" value="Update"/>
-                    <h:commandButton styleClass="btn btn-secondary btn-sm" action="#{writerBean.clear()}" value="Clear Form"/>
+                    <h:commandButton styleClass="btn btn-success btn-sm"  action="#{writerBean.create()}" value="Create">
+                        <f:ajax execute="writer-form" render="writer-form writer-table" ></f:ajax>     
+                    </h:commandButton>
+                    <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{writerBean.update()}" value="Update">
+                        <f:ajax execute="writer-form" render="writer-form writer-table" ></f:ajax>     
+                    </h:commandButton>
+                    <h:commandButton styleClass="btn btn-secondary btn-sm" action="#{writerBean.clear()}" value="Clear Form">
+                        <f:ajax execute="@this" render="writer-form" ></f:ajax>     
+                    </h:commandButton>
                 </div>
 
                 <hr></hr>
-
+            </h:form>
+            <h:form id="writer-table">
                 <h:dataTable styleClass="table table-striped table-hover" value="#{writerBean.list}" var="entity">
                     <h:column>
                         <f:facet name="header">ID</f:facet>
@@ -82,8 +89,12 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">ADMINISTRATION</f:facet>
-                        <h:commandButton styleClass="btn btn-danger btn-sm"  action="#{writerBean.delete(entity)}" value="Delete"/>
-                        <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{writerBean.setEntity(entity)}" value="Update"/>
+                        <h:commandButton styleClass="btn btn-danger btn-sm"  action="#{writerBean.delete(entity)}" value="Delete">
+                            <f:ajax execute="@this" render="writer-form writer-table" ></f:ajax>     
+                    </h:commandButton>
+                        <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{writerBean.setEntity(entity)}" value="Update">
+                            <f:ajax execute="@this" render="writer-form writer-table" ></f:ajax>     
+                    </h:commandButton>
                     </h:column>
 
                     <h:column>
