--- a/web/panel/category.xhtml
+++ b/web/panel/category.xhtml
@@ -7,12 +7,12 @@
                 template="/template.xhtml">
     <ui:define name='content'>
         <div class="container">
-            <h:form>
+            <h:form >
                 <h:commandButton styleClass="btn btn-secondary" action="/index" value="Home"/>
 
             </h:form>
             <hr></hr>
-            <h:form>
+            <h:form id="category-form">
 
                 <div class="mb-3">
                     <label class="form-label">Name</label>
@@ -30,13 +30,22 @@
                     <h:inputText styleClass="form-control" value="#{categoryBean.entity.status}"/>
                 </div>
                 <div class="mb-3">
-                    <h:commandButton styleClass="btn btn-success btn-sm"  action="#{categoryBean.create()}" value="Create"/>
-                    <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{categoryBean.update()}" value="Update"/>
-                    <h:commandButton styleClass="btn btn-secondary btn-sm" action="#{categoryBean.clear()}" value="Clear Form"/>
+                    <h:commandButton styleClass="btn btn-success btn-sm"  action="#{categoryBean.create()}" value="Create">
+                        <f:ajax execute="category-form" render="category-table category-form"></f:ajax>     
+
+                        </h:commandButton>
+                    <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{categoryBean.update()}" value="Update">
+                        <f:ajax execute="category-form" render="category-table category-form"></f:ajax>     
+
+                        </h:commandButton>
+                    <h:commandButton styleClass="btn btn-secondary btn-sm" action="#{categoryBean.clear()}" value="Clear Form">
+                        <f:ajax execute="@this" render="category-table category-form"></f:ajax>     
+
+                        </h:commandButton>
                 </div>
-
+                </h:form>
                 <hr></hr>
-
+                <h:form id="category-table">
                 <h:dataTable styleClass="table table-striped table-hover" value="#{categoryBean.list}" var="entity">
                     <h:column>
                         <f:facet name="header">ID</f:facet>
@@ -56,8 +65,14 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">ADMINISTRATION</f:facet>
-                        <h:commandButton styleClass="btn btn-danger btn-sm"  action="#{categoryBean.delete(entity)}" value="Delete"/>
-                        <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{categoryBean.setEntity(entity)}" value="Update"/>
+                        <h:commandButton styleClass="btn btn-danger btn-sm"  action="#{categoryBean.delete(entity)}" value="Delete">
+                            <f:ajax execute="@this" render="category-table category-form"></f:ajax>     
+
+                        </h:commandButton>
+                        <h:commandButton styleClass="btn btn-primary btn-sm"  action="#{categoryBean.setEntity(entity)}" value="Update">
+                            <f:ajax execute="@this" render="category-table category-form"></f:ajax>     
+
+                        </h:commandButton>
                     </h:column>
                     <h:column>
                         <h:link   styleClass="btn btn-warning btn-sm" target="_blank" outcome="/panelDetail/categoryDetail" value="Detay görüntüle">
