--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -52,6 +52,9 @@
                                     <h:commandButton styleClass="btn btn-success" action="/panel/contact" value="contact"/>     <br></br>
                                     <h:commandButton styleClass="btn btn-danger" action="/panel/blog" value="blog"/>     <br></br>
                                     <h:commandButton styleClass="btn btn-warning" action="/panel/about" value="about"/>    <br></br> 
+                                    
+                                    <h:commandButton styleClass="btn btn-warning" action="/panel/privilege" value="privilage"/>    <br></br> 
+                                    <h:commandButton styleClass="btn btn-warning" action="/panel/group" value="group"/>    <br></br> 
 
 
 
